compiler/testData/diagnostics/tests/duplicateJvmSignature/erasure/nullableType.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_PLATFORM_DECLARATIONS!>fun foo(x: String)<!> {}
<!CONFLICTING_PLATFORM_DECLARATIONS!>fun foo(x: String?)<!> {}